--- a/css/styles.css
+++ b/css/styles.css
@@ -193,6 +193,8 @@ header {
 .button.secondary:focus {
   background-color: var(--accent-color);
   color: var(--second-accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* sections */
@@ -238,11 +240,13 @@ header {
   margin-top: 0;
   margin-bottom: 0;
 }
-.benefits .icon {
-  width: 270px;
+.about-benefit {
   height: 120px;
-  padding: 25px 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #f5f4fa;
+  border-radius: 4px;
   margin-bottom: 30px;
 }
 
@@ -326,8 +330,7 @@ header {
 .team-icons {
   display: flex;
   flex-wrap: wrap;
-  margin-left: 32px;
-  margin-right: 32px;
+  justify-content: center;
 }
 .team-icons .item-social {
   margin-right: 10px;
@@ -336,11 +339,11 @@ header {
   margin-right: 0;
 }
 .team-icons .media {
-  display: block;
+  display: flex;
   align-items: center;
+  justify-content: center;
   width: 44px;
   height: 44px;
-  padding: 12px;
   border-radius: 50%;
   fill: #afb1b8;
 }
@@ -359,7 +362,8 @@ header {
   display: flex;
 }
 .our-clients .item {
-  border: 1px solid #afb1b8;
+  border: 1px solid rgba(175, 177, 184, 1);
+  border-radius: 4px;
   margin-right: 30px;
 }
 
@@ -373,11 +377,12 @@ header {
   height: 92px;
   padding: 16px 32px;
   fill: #afb1b8;
+  border: 1px solid rgba(175, 177, 184, 1);
 }
 .clients-link:hover,
 .clients-link:focus {
   fill: var(--accent-color);
-  border: 1px solid var(--accent-color);
+  border-color: var(--accent-color);
 }
 
 /* Футер */
@@ -453,12 +458,12 @@ footer {
   margin-right: 10px;
 }
 .media-link {
-  display: block;
+  display: flex;
   align-items: center;
+  justify-content: center;
   fill: var(--second-accent-color);
   width: 44px;
   height: 44px;
-  padding: 12px;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
 }
@@ -489,6 +494,16 @@ footer {
 }
 .projects .item:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
+.project-link {
+  display: block;
+  text-decoration: none;
+  color: inherit;
+}
+.project-link:hover,
+.project-link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .about-project {
   padding: 20px 24px;
