--- a/css/styles.css
+++ b/css/styles.css
@@ -362,8 +362,6 @@ header {
   display: flex;
 }
 .our-clients .item {
-  border: 1px solid rgba(175, 177, 184, 1);
-  border-radius: 4px;
   margin-right: 30px;
 }
 
@@ -371,13 +369,14 @@ header {
   margin-right: 0;
 }
 .clients-link {
-  display: block;
+  display: flex;
   align-items: center;
+  justify-content: center;
   width: 170px;
   height: 92px;
-  padding: 16px 32px;
   fill: #afb1b8;
   border: 1px solid rgba(175, 177, 184, 1);
+  border-radius: 4px;
 }
 .clients-link:hover,
 .clients-link:focus {
